adicionando editar / visualizar nota fiscal